[gd_scene load_steps=13 format=3 uid="uid://gp6l62op1542"]

[ext_resource type="Material" uid="uid://bhxd3sfg8q482" path="res://textures/world/tile_floor.tres" id="1_jptr3"]
[ext_resource type="Script" uid="uid://cjbwtt0x3llg4" path="res://src/level/room.gd" id="1_s7ow8"]
[ext_resource type="FontFile" uid="uid://deuvx1gp7xh55" path="res://font/PressStart2P.ttf" id="4_yx7o1"]

[sub_resource type="PlaneMesh" id="PlaneMesh_t83kv"]
size = Vector2(30, 30)

[sub_resource type="PlaneMesh" id="PlaneMesh_em28x"]
size = Vector2(30, 20)
orientation = 0

[sub_resource type="Resource" id="Resource_2rrfw"]
metadata/__load_path__ = "res://material/palace/bricks_0.tres"

[sub_resource type="Resource" id="Resource_w8x4x"]
metadata/__load_path__ = "res://material/palace/bricks_0.tres"

[sub_resource type="PlaneMesh" id="PlaneMesh_mi1sq"]
size = Vector2(30, 20)
orientation = 2

[sub_resource type="Resource" id="Resource_8wpdh"]
metadata/__load_path__ = "res://material/palace/bricks_0.tres"

[sub_resource type="Resource" id="Resource_qk1ua"]
metadata/__load_path__ = "res://material/palace/bricks_0.tres"

[sub_resource type="BoxShape3D" id="BoxShape3D_2dsrf"]
size = Vector3(29.5, 20, 29.5)

[sub_resource type="BoxShape3D" id="BoxShape3D_pt7ia"]

[node name="RoomTemplate" type="Node3D"]
script = ExtResource("1_s7ow8")

[node name="Tile" type="CSGCombiner3D" parent="."]
use_collision = true
collision_layer = 7
collision_mask = 7

[node name="Floor" type="CSGMesh3D" parent="Tile"]
mesh = SubResource("PlaneMesh_t83kv")
material = ExtResource("1_jptr3")

[node name="Ceiling" type="CSGMesh3D" parent="Tile"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 20, 0)
flip_faces = true
mesh = SubResource("PlaneMesh_t83kv")
material = ExtResource("1_jptr3")

[node name="Walls" type="CSGCombiner3D" parent="."]
use_collision = true
collision_layer = 7
collision_mask = 7

[node name="Left" type="CSGMesh3D" parent="Walls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -15, 10, 0)
mesh = SubResource("PlaneMesh_em28x")
material = SubResource("Resource_2rrfw")

[node name="Right" type="CSGMesh3D" parent="Walls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 10, 0)
flip_faces = true
mesh = SubResource("PlaneMesh_em28x")
material = SubResource("Resource_w8x4x")

[node name="Forward" type="CSGMesh3D" parent="Walls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10, -15)
mesh = SubResource("PlaneMesh_mi1sq")
material = SubResource("Resource_8wpdh")

[node name="Back" type="CSGMesh3D" parent="Walls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10, 15)
flip_faces = true
mesh = SubResource("PlaneMesh_mi1sq")
material = SubResource("Resource_qk1ua")

[node name="Volume" type="Area3D" parent="."]
collision_layer = 128
collision_mask = 128

[node name="CollisionShape3D" type="CollisionShape3D" parent="Volume"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10, 0)
shape = SubResource("BoxShape3D_2dsrf")

[node name="ForwardQuery" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10, -16)
collision_layer = 128
collision_mask = 128

[node name="CollisionShape3D" type="CollisionShape3D" parent="ForwardQuery"]
shape = SubResource("BoxShape3D_pt7ia")

[node name="BackQuery" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10, 16)
collision_layer = 128
collision_mask = 128

[node name="CollisionShape3D" type="CollisionShape3D" parent="BackQuery"]
shape = SubResource("BoxShape3D_pt7ia")

[node name="RightQuery" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 16.1, 10, 2.23517e-08)
collision_layer = 128
collision_mask = 128

[node name="CollisionShape3D" type="CollisionShape3D" parent="RightQuery"]
shape = SubResource("BoxShape3D_pt7ia")

[node name="LeftQuery" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -15.9, 10, 2.23517e-08)
collision_layer = 128
collision_mask = 128

[node name="CollisionShape3D" type="CollisionShape3D" parent="LeftQuery"]
shape = SubResource("BoxShape3D_pt7ia")

[node name="ID" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 23, 0)
pixel_size = 0.015
billboard = 1
fixed_size = true
texture_filter = 0
text = "1"
font = ExtResource("4_yx7o1")
font_size = 8
outline_size = 0

[connection signal="area_entered" from="Volume" to="." method="volume_area_entered"]
[connection signal="area_entered" from="ForwardQuery" to="." method="forward_query_area_entered"]
[connection signal="area_exited" from="ForwardQuery" to="." method="forward_query_area_exited"]
[connection signal="area_entered" from="BackQuery" to="." method="back_query_area_entered"]
[connection signal="area_exited" from="BackQuery" to="." method="back_query_area_exited"]
[connection signal="area_entered" from="RightQuery" to="." method="right_query_area_entered"]
[connection signal="area_exited" from="RightQuery" to="." method="right_query_area_exited"]
[connection signal="area_entered" from="LeftQuery" to="." method="left_query_area_entered"]
[connection signal="area_exited" from="LeftQuery" to="." method="left_query_area_exited"]
